--- a/ShipmentTrackingSite/ShipmentTrackingSite/appsettings.json
+++ b/ShipmentTrackingSite/ShipmentTrackingSite/appsettings.json
@@ -5,6 +5,17 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ConnectionString": "Server=shipment-mysqdb.mysql.database.azure.com;UserID=njohn;Password=@Jewels808;Database=shipment;"
+  }
 }
 
+
+
+//  "ConnectionStrings": {
+//    "ConnectionString": "Server=nehemiahjohnsite-mysqdb.mysql.database.azure.com;UserID=njohn;Password=@Jewels808;Database=Messages;"
+//  }
+//}
+
+//Server="shipment-mysqdb.mysql.database.azure.com;UserID=njohn;Password=@Jewels808;Database=shipment;"
