--- a/ShipmentTrackingSite/ShipmentTrackingSite/appsettings.json
+++ b/ShipmentTrackingSite/ShipmentTrackingSite/appsettings.json
@@ -7,9 +7,12 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ConnectionString": "Server=shipment-mysqdb.mysql.database.azure.com;UserID=njohn;Password=@Jewels808;Database=shipment;"
+    "ConnectionString": "server=127.0.0.1;uid=root;pwd=@Jewels808;database=shipingorders"
   }
 }
+
+//WORKING ONE
+//"ConnectionString": "Server=shipment-mysqdb.mysql.database.azure.com;UserID=njohn;Password=@Jewels808;Database=shipment;"
 
 
 
@@ -19,3 +22,7 @@
 //}
 
 //Server="shipment-mysqdb.mysql.database.azure.com;UserID=njohn;Password=@Jewels808;Database=shipment;"
+
+//"ConnectionStrings": {
+//  "mySql": "server=127.0.0.1;uid=root;pwd=YOURPASSWORDGOESHERE;database=MMABooks"
+//}
