--- a/ShipmentTrackingSite/ShipmentTrackingSite/appsettings.json
+++ b/ShipmentTrackingSite/ShipmentTrackingSite/appsettings.json
@@ -5,24 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  //"AllowedHosts": "*",
+  //"ConnectionStrings": {
+  //  "ConnectionString": "server=127.0.0.1;uid=root;pwd=@Jewels808;database=shipingorders"
+  //}
   "AllowedHosts": "*",
+
   "ConnectionStrings": {
-    "ConnectionString": "server=127.0.0.1;uid=root;pwd=@Jewels808;database=shipingorders"
+    "ConnectionString": "Server=shipment-mysqdb.mysql.database.azure.com;UserID=njohn;Password=@Jewels808;Database=shipment;"
   }
 }
-
-//WORKING ONE
-//"ConnectionString": "Server=shipment-mysqdb.mysql.database.azure.com;UserID=njohn;Password=@Jewels808;Database=shipment;"
-
-
-
-//  "ConnectionStrings": {
-//    "ConnectionString": "Server=nehemiahjohnsite-mysqdb.mysql.database.azure.com;UserID=njohn;Password=@Jewels808;Database=Messages;"
-//  }
-//}
-
-//Server="shipment-mysqdb.mysql.database.azure.com;UserID=njohn;Password=@Jewels808;Database=shipment;"
-
-//"ConnectionStrings": {
-//  "mySql": "server=127.0.0.1;uid=root;pwd=YOURPASSWORDGOESHERE;database=MMABooks"
-//}
