--- a/ShipmentTrackingSite/ShipmentTrackingSite/appsettings.json
+++ b/ShipmentTrackingSite/ShipmentTrackingSite/appsettings.json
@@ -12,6 +12,6 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "ConnectionString": "Server=shipment-mysqdb.mysql.database.azure.com;UserID=njohn;Password=@Jewels808;Database=shipment;"
+    "ConnectionString": "Server=shipment-mysqdb.mysql.database.azure.com;UserID=njohn;Password=INSERTPASSWORD;Database=shipment;"
   }
 }
