--- a/ShipmentTrackingSite/ShipmentTrackingSite/appsettings.json
+++ b/ShipmentTrackingSite/ShipmentTrackingSite/appsettings.json
@@ -7,7 +7,7 @@
   },
   //"AllowedHosts": "*",
   //"ConnectionStrings": {
-  //  "ConnectionString": "server=127.0.0.1;uid=root;pwd=@Jewels808;database=shipingorders"
+  //  "ConnectionString": "server=127.0.0.1;uid=root;pwd=INSERTPASSWORD;database=shipingorders"
   //}
   "AllowedHosts": "*",
 
